--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta property="og:title" content="25cfff8f-ea69-4ad4-872f-e7b1f8fea874" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/images/logo.png" />
+    <meta property="og:image" content="/blazemetrics/images/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="/images/logo.png" />
+    <meta name="twitter:image" content="/blazemetrics/images/logo.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/images/logo.png" />
+    <link rel="icon" type="image/png" href="/blazemetrics/images/logo.png" />
   </head>
 
   <body>
