--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlazeMetrics - Lightning Fast LLM Evaluation</title>
     <meta name="description" content="Ultra-high-performance evaluation suite for LLMs, GenAI, and multimodal models. Built with Rust for enterprise scale - 10-100x faster than alternatives." />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="gaurav" />
 
-    <meta property="og:title" content="25cfff8f-ea69-4ad4-872f-e7b1f8fea874" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="BlazeMetrics - Lightning Fast LLM Evaluation" />
+    <meta property="og:description" content="Ultra-high-performance evaluation suite for LLMs, GenAI, and multimodal models. Built with Rust for enterprise scale - 10-100x faster than alternatives." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/blazemetrics/images/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@gaurav_dev" />
     <meta name="twitter:image" content="/blazemetrics/images/logo.png" />
 
     <!-- Favicon -->
